// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressiveImage should match snapshot for BackgroundImage 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {},
    ]
  }
>
  <ImageBackground
    resizeMode="cover"
    source={
      Object {
        "uri": "https://images.com/image.png",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`ProgressiveImage should match snapshot for Default Image 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {},
    ]
  }
>
  <ForwardRef(AnimatedComponentWrapper)
    nativeID="image-undefined"
    onError={[MockFunction]}
    resizeMethod="auto"
    resizeMode="contain"
    source="https://images.com/image.png"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
        null,
      ]
    }
  />
</View>
`;

exports[`ProgressiveImage should match snapshot for Image 1`] = `
<ForwardRef(AnimatedComponentWrapper)
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {},
      Object {
        "backgroundColor": "rgba(61,60,64,NaN)",
      },
    ]
  }
>
  <ForwardRef(AnimatedComponentWrapper)
    onError={[MockFunction]}
    resizeMethod="auto"
    resizeMode="contain"
    source={
      Object {
        "testUri": "../../../dist/assets/images/thumb.png",
      }
    }
    style={
      Array [
        undefined,
        Object {
          "opacity": 0.5,
          "tintColor": "#3d3c40",
        },
      ]
    }
    testID="progressive_image.thumbnail"
  />
  <ForwardRef(AnimatedComponentWrapper)
    nativeID="image-undefined"
    onError={[MockFunction]}
    onLoadEnd={[Function]}
    resizeMethod="auto"
    resizeMode="contain"
    source={
      Object {
        "uri": "https://images.com/image.png",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
        Object {
          "opacity": 0,
        },
      ]
    }
    testID="progressive_image.highResImage"
  />
</ForwardRef(AnimatedComponentWrapper)>
`;
